--- a/lesson-1/project-template/tsconfig.json
+++ b/lesson-1/project-template/tsconfig.json
@@ -1,10 +1,12 @@
 {
-    "compilerOptions": {
-      "outDir": "public/scripts",
-      "module": "es2015",
-      "target": "es2015",
-      "moduleResolution": "node"
-    },
-    //  "exclude": ["node_modules"],
-    "files": ["src/index.ts"]
-  }
+  "compilerOptions": {
+    "outDir": "public/scripts",
+    "module": "es2015",
+    "target": "es2015",
+    "moduleResolution": "node",
+    "allowJs": true
+  },
+  "files": [
+    "src/index.ts"
+  ]
+}
