--- a/lesson-1/study/tsconfig.json
+++ b/lesson-1/study/tsconfig.json
@@ -1,10 +1,15 @@
 {
-    "compilerOptions": {
-      "outDir": "public/scripts",
-      "module": "es2015",
-      "target": "es2015",
-      "moduleResolution": "node"
-    },
-    //  "exclude": ["node_modules"],
-    "files": ["src/index.ts"]
-  }
+  "compilerOptions": {
+    "outDir": "public/scripts",
+    "module": "es2015",
+    "target": "es2015",
+    "moduleResolution": "Node",
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "files": [
+    "src/study.ts"
+//    "src/index.ts"
+  ]
+}
